@@ -544,6 +544,4 @@ AST_Type::destroy (void)
   this->AST_Decl::destroy ();
 }
 
-
-
 IMPL_NARROW_FROM_DECL(AST_Type)
